apontando caminho das views e utilizando o utilitario nodemon

--- a/views/admin/form_add_noticia.ejs
+++ b/views/admin/form_add_noticia.ejs
@@ -2,11 +2,11 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Formulário de cadastro de Notícia</title>
+			<title>Here you add in-app news</title>
 		</head>
 	<body>
 
-		<h1>Adicionar notícia</h1>
+		<h1>Add news</h1>
 
 	</body>
 </html>
