--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -2,11 +2,11 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Portal de notícias</title>
+			<title>News portal</title>
 		</head>
 	<body>
 
-		<h1>Bem vindo a página inicial</h1>
+		<h1>Welcome to homepage!</h1>
 
 	</body>
 </html>
