--- a/views/noticias/noticias.ejs
+++ b/views/noticias/noticias.ejs
@@ -2,11 +2,11 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Notícias</title>
+			<title>News</title>
 		</head>
 	<body>
 
-		<h1>Notícias</h1>
+		<h1>News</h1>
 
 	</body>
 </html>
