implementando express validator para validar campos do form, faltando apenas mostrar os erros na tela e manter os campos certos preenchidos

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -14,6 +14,18 @@
 				<input type="text" name="titulo" id="titulo" placeholder="Title of news">
 			</p>
 			<p>
+				<label>Summary:</label>
+				<input type="text" name="resumo" id="resumo" placeholder="Summary of news">
+			</p>
+			<p>
+				<label>Author:</label>
+				<input type="text" name="autor" id="autor" placeholder="Author of news">
+			</p>
+			<p>
+				<label>Date:</label>
+				<input type="date" name="data_noticia" id="data_noticia" placeholder="Date of news">
+			</p>
+			<p>
 				<textarea rows="5" cols="30" name="noticia" id="noticia" placeholder="Content of news"></textarea>
 			</p>
 			<p><input type="submit" placeholder="Enviar"></p>
