--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -35,7 +35,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="/">HOME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -47,7 +47,7 @@
 	    		<div class="col-md-8">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor"><%= news[0].autor %></span>
-		    			<a href="noticia.html" class="noticia_titulo"><%= news[0].titulo %></a>
+		    			<a href="single-news?thenews=<%= news[0].id_noticia %>" class="noticia_titulo"><%= news[0].titulo %></a>
 		    			<span class="noticia_data"><%= news[0].data_noticia %></span>
 		    			<br />
 		    			<p class="noticia_resumo">
@@ -59,7 +59,7 @@
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor"><%= news[1].autor %></span>
-		    			<a href="noticia.html" class="noticia_titulo"><%= news[1].titulo %></a>
+		    			<a href="single-news?thenews=<%= news[1].id_noticia %>" class="noticia_titulo"><%= news[1].titulo %></a>
 		    			<span class="noticia_data"><%= news[1].data_noticia %></span>
 		    			<br />
 		    			<p class="noticia_resumo">
@@ -74,7 +74,7 @@
 	    		<div class="col-md-4">
 	    			<div class="noticia_wrapper">
 		    			<span class="noticia_autor"><%= news[i].autor %></span>
-		    			<a href="noticia.html" class="noticia_titulo"><%= news[i].titulo %></a>
+		    			<a href="single-news?thenews=<%= news[i].id_noticia %>" class="noticia_titulo"><%= news[i].titulo %></a>
 		    			<span class="noticia_data"><%= news[i].data_noticia %></span>
 		    			<br />
 		    			<p class="noticia_resumo">
@@ -86,7 +86,7 @@
 	    	</div>
 
 	    	<div class="row ver_mais">
-	    		<button type="button" class="btn btn-default"><a href="noticias.html">Ver todas as notícias</a></button>
+	    		<button type="button" class="btn btn-default"><a href="news">Ver todas as notícias</a></button>
 	    	</div>
 
 	    </div>
