--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -35,7 +35,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="/">HOME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -43,19 +43,23 @@
 
 
 	    <div class="container">
+			<% if(news.length > 0) { %>
 	    	<div class="row">
 	    		<div class="col-md-12">
 	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia/1" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
+		    			<span class="noticia_autor"><%= news[0].autor; %></span>
+		    			<a href="single-news?thenews=<%= news[0].id_noticia %>" class="noticia_titulo"><%= news[0].titulo; %></a>
+		    			<span class="noticia_data"><%= news[0].data_noticia; %></span>
 		    			<br />
 		    			<p class="noticia_resumo">
-		    				Aqui fica o texto da notícia na íntegra.
+		    				<%= news[0].resumo; %>
 		    			</p>
 		    		</div>
 		    	</div>
-	    	</div>
+			</div>
+			<% } else { %>
+			<div class="alert alert-danger">Notícia não encontrada... =(</div>
+			<% } %>
 	    </div>
 	
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
